<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Yahoo</string>
    <string name="username">UserName :</string>
     <string name="pwd">Enter Password ....</string>
     <string name="login"> USER LOGIN</string>
      <string name="signup">  SIGN UP</string>
     <string name="password">Password  :</string>
        <string name="wel">Welcome</string>
     <string name="loginbtn">Login</string>
     <string name="desc">Desc</string>
     <string name="rmd">Keep Me Log In</string>
     <string name="forgot">Forgot Password???</string>
     <string name="action_settings">Settings</string>
     <string name="enterusername">Enter User name</string>
    

</resources>
