
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/x"
    android:orientation="vertical"
    android:weightSum="3">

    <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:layout_marginBottom="15dp"
    >
    
       <ImageView
        android:contentDescription="@string/desc"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:src="@drawable/y" />
            
      </LinearLayout>
            
      <TextView
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="15sp"/> 
      

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:layout_weight="0.6" />

            <EditText
                android:inputType="text"
                android:hint="@string/enterusername"
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               
                android:layout_weight="1.4" 
                />

     </LinearLayout>
    
     <LinearLayout   
         android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:weightSum="2"
		    android:layout_marginBottom="15dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_weight="0.4" />
    
      <EditText
          android:id="@+id/password"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1.52"
          android:inputType="textPassword" 
          android:hint="@string/pwd"/>
      
      </LinearLayout>  
      
      <LinearLayout   
         android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:weightSum="2" >
     
     
     <Button 
         android:id="@+id/login_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:text="@string/loginbtn"
         android:layout_marginBottom="15dp"
         android:layout_weight="1"
         />
     <Button 
         android:id="@+id/sign_up"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:text="@string/signup"
         android:layout_marginBottom="15dp"
         android:layout_weight="1"
         />
     </LinearLayout>
     
<CheckBox 
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/rmd"
        android:layout_gravity="center_horizontal"/>

   <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot"
        android:layout_gravity="center_horizontal" 
        android:layout_marginBottom="15dp"/>
   
   
     
  </LinearLayout>
    
  
  
        
    
  
     
   
    
  

